--- a/public/about/index.html
+++ b/public/about/index.html
@@ -8,7 +8,7 @@
 
 	<title>About</title>
 
-	<link rel="shortcut icon" href="http://www.rjsdatascience.comimages/gt_favicon.png">
+	<link rel="shortcut icon" href="/images/gt_favicon.png">
 
 	
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 	
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	
-	<link rel="stylesheet" href="http://www.rjsdatascience.comcss/styles.css">
+	<link rel="stylesheet" href="/css/styles.css">
 
 	
 
@@ -31,7 +31,7 @@
 <header id="header">
 	<div id="head" class="parallax" parallax-speed="2">
 		<h1 id="logo" class="text-center">
-			<img class="img-circle" src="http://www.rjsdatascience.comimages/Logo_square.png" alt="">
+			<img class="img-circle" src="/images/Logo_square.png" alt="">
 			<span class="title">RJS Data Science LLC</span>
 			<span class="tagline">Professional statistician and data science consultant with 15&#43; years experience<br>
 				<a href="">john@rjsdatascience.com</a>
@@ -241,7 +241,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="http://www.rjsdatascience.comjs/template.js"></script>
+<script src="/js/template.js"></script>
 <script id="dsq-count-scr" src="//randomjohn/count.js" async></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
